<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16sp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tituloInicio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:padding="16sp"
        android:text="@string/msj_bienvenida"
        android:textAlignment="center"
        android:textSize="18sp"/>

    <Button
        android:id="@+id/sensoresButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:padding="16sp"
        android:text="@string/sensoresButtonText"/>
    <Button
        android:id="@+id/ubicacionesButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:padding="16sp"
        android:text="@string/ubicacionesButtonText"/>
    <Button
        android:id="@+id/lecturasButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8sp"
        android:padding="16sp"
        android:text="@string/lecturasButtonText"/>

</LinearLayout>